Fix z-index issue
ERM39382

[REL1_39, REL1_39-4.5.x, REL1_43, master]

(cherry picked from commit d0501f153580ca8fefe1415897507acc8072f653)

--- a/resources/stylesheets/fixes/ve-fixes.css
+++ b/resources/stylesheets/fixes/ve-fixes.css
@@ -1,5 +1,5 @@
 body.mediawiki .ve-ui-overlay-global {
-	z-index: 1052;
+	z-index: 1051;
 	font-family: 'Lato';
 }
 
